fix(styles): fix overflow

--- a/src/components/ProductGrid/styles.module.scss
+++ b/src/components/ProductGrid/styles.module.scss
@@ -10,7 +10,6 @@
   }
 
   div {
-    overflow: auto;
     height: calc(100% - 28px);
     padding: 8px;
 
@@ -39,7 +38,7 @@
       margin: 0 auto;
       width: 100%;
       justify-self: center;
-  
+
       img {
         width: 100%;
         height: 100%;
